# 2048-cui

./: .gitignore  .pre-commit-config.yaml  MODERN_RECONSTRUCTION.md  Makefile  README.md  build.bat  build.py  build.sh  build.spec  config.json  dev-setup.sh  init_doc.md  plan_log.md  pyproject.toml
.github/workflows/: build.yml  quality.yml
saves/: slot_0.json  slot_1.json  slot_2.json  slot_3.json  slot_99.json
src/: config.json  config_example.json  main.py
src/2048_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/: config.py  constants.py  i18n.py  key_config.py  key_display.py  modern_themes.py  save_load.py
src/game/: board.py  game.py
src/locales/: en.json  ja.json
src/ui/: animation.py  display.py  input.py  key_config_menu.py  menu.py  modern_display.py  settings_menu.py
